# zenoh-mcp

./: Cargo.toml  LICENSE  README.md
.github/workflows/: deploy-docs.yml
site/: astro.config.mjs  package-lock.json
site/src/content/docs/: index.mdx
site/src/content/docs/guides/: configuration.md  getting-started.md
site/src/content/docs/reference/: decoding.md  spec.md  tools.md
src/: decode.rs  main.rs
